--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <a href="..." target="_blank">
                     <div class="gallery-item"><img src="pudupediaLogo.jpg" alt="Proyecto 1" height="200" width="4 00">
                     </div>
-                    <h5>Proyecto integrador que hicimos con mi equipo de Generation.</br>
+                    <h5>Proyecto integrador que estamos desarrollando con mi equipo de Generation.</br>
                         ODS 15 de la ONU: vida de ecosistemas terrestres.</h5>
                 </a>
                 <a href="https://biank123.github.io/memodino.github.io/" target="_blank">
