--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
         <img src="https://media.licdn.com/dms/image/D4E03AQE1SGK9c_TA6g/profile-displayphoto-shrink_800_800/0/1720463015213?e=1727308800&v=beta&t=HbbMzHAjYB2PBh3garWZ84rQGLbcoGSiSvj3_jGh9BQ" width="300" alt="Bianca de Petris">
         <h3><u>Sobre mí:</u></h3>
         <p>Estudié filosofía y pedagogía en la Universidad de Chile, donde desarrollé habilidades de pensamiento crítico
-            y analítico estudiando lógica, con la que me acerqué a la lógica de la programación. De esta forma, medida
+            y analítico estudiando lógica, con la que me acerqué a la lógica de la programación. De esta forma, a medida
             que profundizaba en estas áreas de las humanidades, sentí que me faltaba una conexión con problemas más
             amplios y prácticos. Descubrí que la tecnología ofrecía la oportunidad de llevar mi pasión por la lógica aún
             más lejos y decidí cambiar de rubro. </br>
             Actualmente estoy completando un bootcamp en Generation Chile para convertirme en desarrolladora Full Stack
             JavaScript. Este programa intensivo me está preparando para enfrentar desafíos reales en el desarrollo web.
             Aunque no tengo mucha experiencia formal en programación, he trabajado en proyectos personales y
-            colaborativos que me han permitido aplicar y mejorar mis habilidades.</br>
-            Actualmente, estoy finalizando el bootcamp con un proyecto grupal llamado PuduPedia, una guía de ecosistemas
-            terrestres chilenos orientada a la educación sobre la biodiversidad chilena y el ecoturismo. Durante este
-            proceso, gané experiencia en tecnologías clave como Javascript, Node.js, HTML, CSS, React, entre otras.</br>
+            colaborativos que me han permitido aplicar y mejorar mis habilidades técnicas, de comunicación y de trabajo colaborativo.</br>
+            Con un proyecto grupal llamado PuduPedia, una guía de ecosistemas
+            terrestres chilenos orientada a la educación sobre la biodiversidad chilena y el ecoturismo, gané experiencia en 
+            tecnologías clave como Javascript, Node.js, HTML, CSS, React, MySQL, entre otras.</br>
             En el futuro, quiero seguir aprendiendo y desarrollándome en el área de backend, ya que amo la lógica y la
             estructura que esta área requiere. Mi meta es contribuir significativamente a proyectos que marquen una
             diferencia junto a un equipo colaborador y un ambiente de trabajo grato y que permita el crecimiento
