--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <h2>¡Saludos!</h2>
                     <img src="https://media.licdn.com/dms/image/D4E03AQHldMtklVkUgQ/profile-displayphoto-shrink_800_800/0/1722724405975?e=1727913600&v=beta&t=sByQz6o5P7Z09CGCMJSBNAzWwFHqnJNPZu3n8SVM2y4"
                         alt="about me" class="image-responsive img-circle img-thumbnail center-block" width="300px">
-                    <p class="about-text">Soy desarrolladora web fullstack con conocimientos en la metodología Scrum, Kanban y de tecnologías clave como JavaScript, Python, Node.js, HTML, CSS, React, y PostgreSQL. Mi formación en filosofía me brindó una sólida base en lógica, lo que me permitió acercarme a la programación con facilidad. Estoy abierta a explorar tanto el backend como el frontend, con el objetivo de contribuir a proyectos significativos en un entorno colaborativo que promueva el crecimiento profesional. Te invito a seguirme en LinkedIn y GitHub para mantenernos en contacto y explorar oportunidades juntos.
+                    <p class="about-text">Soy desarrolladora web fullstack con conocimientos en la metodología Scrum, Kanban y de tecnologías clave como JavaScript, Python, Node.js con Express.js, HTML, CSS, React, Postman y PostgreSQL. Mi formación en filosofía me brindó una sólida base en lógica, lo que me permitió acercarme a la programación con facilidad. Estoy abierta a explorar tanto el backend como el frontend, con el objetivo de contribuir a proyectos significativos en un entorno colaborativo que promueva el crecimiento profesional. Te invito a seguirme en LinkedIn y GitHub para mantenernos en contacto y explorar oportunidades juntos.
                     </p>
                 </div>
             </div>
@@ -81,10 +81,10 @@
             </h2>
             <div class="row">
                 <div class="col-md-4 col-sm-6 col-xs-12">
-                    <a href="https://www.example.com/" target="_blank">
+                    <a href="https://github.com/Yin-Aranguiz/PuduPedia/tree/dev_bianca2" target="_blank">
                         <div class="block wow rotateInDownLeft" data-wow-duration="1s" data-wow-delay="0.15s">
                             <div class="works-thumb" id="work-1"></div>
-                            <div class="works-caption">Pudupedia: página web</div>
+                            <div class="works-caption">Pudupedia: página web. Avances en github.</div>
                         </div>
                     </a>
                 </div>
@@ -113,10 +113,10 @@
                     </a>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12">
-                    <a href="https://www.example.com/" target="_blank">
+                    <a href="https://github.com/Biank123/Philosophicus" target="_blank">
                         <div class="block wow rotateInDownRight" data-wow-duration=".8s" data-wow-delay="0.75s">
                             <div class="works-thumb" id="work-5"></div>
-                            <div class="works-caption">E-commerce</div>
+                            <div class="works-caption">Philosophicus: página web. Avances en github.</div>
                         </div>
                     </a>
                 </div>
@@ -124,7 +124,7 @@
                     <div class="block wow rotateInDownRight" data-wow-duration=".8s" data-wow-delay="0.9s">
                         <div class="works-thumb" id="work-6"></div>
                         <a href="https://www.example.com/">
-                            <div class="works-caption">Página web</div>
+                            <div class="works-caption">Mi próximo proyecto puedes dármelo tú!!!</div>
                         </a>
                     </div>
                 </div>
