--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <a href="https://github.com/Yin-Aranguiz/PuduPedia/tree/dev_bianca2" target="_blank">
                         <div class="block wow rotateInDownLeft" data-wow-duration="1s" data-wow-delay="0.15s">
                             <div class="works-thumb" id="work-1"></div>
-                            <div class="works-caption">Pudupedia: página web. Avances en github.</div>
+                            <div class="works-caption">Pudupedia: página web.</div>
                         </div>
                     </a>
                 </div>
@@ -116,7 +116,7 @@
                     <a href="https://github.com/Biank123/Philosophicus" target="_blank">
                         <div class="block wow rotateInDownRight" data-wow-duration=".8s" data-wow-delay="0.75s">
                             <div class="works-thumb" id="work-5"></div>
-                            <div class="works-caption">Philosophicus: página web. Avances en github.</div>
+                            <div class="works-caption">Philosophicus: página web.</div>
                         </div>
                     </a>
                 </div>
