--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
                 <div class="col-md-3 col-sm-6 col-xs-12">
                     <div class="skills-thumb wow bounceIn" data-wow-duration="1.5s" data-wow-delay="0.4s">
-                        <img src="https://media.dev.to/cdn-cgi/image/width=1080,height=1080,fit=cover,gravity=auto,format=auto/https%3A%2F%2Fdev-to-uploads.s3.amazonaws.com%2Fuploads%2Farticles%2F096baapsqqt9fks0us99.png"
+                        <img src="https://pbs.twimg.com/profile_images/1785867863191932928/EpOqfO6d_400x400.png"
                             alt="React logo" class="img-responsive img-thumbnail center-block">
 
                         <p>.....</p>
