--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
                 <div class="col-md-4 col-sm-6 col-xs-12">
                     <div class="block wow rotateInDownRight" data-wow-duration=".8s" data-wow-delay="0.9s">
                         <div class="works-thumb" id="work-6"></div>
-                        <a href="https://www.example.com/">
-                            <div class="works-caption">Mi próximo proyecto puedes dármelo tú!!!</div>
+                        <a href="https://biank123.github.io/my-store/">
+                            <div class="works-caption">My Store: ecommerce en desarrollo</div>
                         </a>
                     </div>
                 </div>
