--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <a href="https://biank123.github.io/Pupupedia/" target="_blank">
                         <div class="block wow rotateInDownLeft" data-wow-duration="1s" data-wow-delay="0.15s">
                             <div class="works-thumb" id="work-1"></div>
-                            <div class="works-caption">Pudupedia: página web. Solo Frontend </div>
+                            <div class="works-caption">Pudupedia: página web. (Solo Frontend) </div>
                         </div>
                     </a>
                 </div>
@@ -113,10 +113,10 @@
                     </a>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12">
-                    <a href="https://github.com/Biank123/Philosophicus" target="_blank">
+                    <a href="https://biank123.github.io/ApiDragonBall/" target="_blank">
                         <div class="block wow rotateInDownRight" data-wow-duration=".8s" data-wow-delay="0.75s">
                             <div class="works-thumb" id="work-5"></div>
-                            <div class="works-caption">Philosophicus: página web.</div>
+                            <div class="works-caption">Dragon Ball API con buscador</div>
                         </div>
                     </a>
                 </div>
@@ -129,6 +129,8 @@
                     </div>
                 </div>
             </div>
+            <p>Otros proyectos en desarrollo: </p>
+            <a href="https://github.com/Biank123/Philosophicus/tree/dev_bianca" target="_blank"></a>
         </div>
     </section>
     <section class="skills scroll" id="skills">
