--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
                     </div>
                 </div>
             </div>
-            <p>Otros proyectos en desarrollo: </p>
-            <a href="https://github.com/Biank123/Philosophicus/tree/dev_bianca" target="_blank"></a>
+            <p>Otros proyectos en desarrollo: 
+            <a href="https://github.com/Biank123/Philosophicus/tree/dev_bianca" target="_blank">PHILOSOPHICUS: Página Web</a></p>
         </div>
     </section>
     <section class="skills scroll" id="skills">
