--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </h2>
             <div class="row">
                 <div class="col-md-4 col-sm-6 col-xs-12">
-                    <a href="https://biank123.github.io/Pupupedia/" target="_blank">
+                    <a href="https://biank123.github.io/Pudupedia/" target="_blank">
                         <div class="block wow rotateInDownLeft" data-wow-duration="1s" data-wow-delay="0.15s">
                             <div class="works-thumb" id="work-1"></div>
                             <div class="works-caption">Pudupedia: página web. (Solo Frontend) </div>
