--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
                     </a>
                 </div>
                 <div class="col-md-4 col-sm-6 col-xs-12">
-                    <a href="https://biank123.github.io/ApiDragonBall/" target="_blank">
+                    <a href="https://biank123.github.io/bookApi/" target="_blank">
                         <div class="block wow rotateInDownRight" data-wow-duration=".8s" data-wow-delay="0.75s">
                             <div class="works-thumb" id="work-5"></div>
-                            <div class="works-caption">Dragon Ball API con buscador</div>
+                            <div class="works-caption">Creé una api de libros y la llamé en el frontend</div>
                         </div>
                     </a>
                 </div>
@@ -130,7 +130,8 @@
                 </div>
             </div>
             <p>Otros proyectos en desarrollo: 
-            <a href="https://github.com/Biank123/Philosophicus/tree/dev_bianca" target="_blank">PHILOSOPHICUS: Página Web</a></p>
+            <a href="https://github.com/Biank123/Philosophicus/tree/dev_bianca" target="_blank">PHILOSOPHICUS: Página Web</a><br>
+            <a href="https://biank123.github.io/ApiDragonBall/" target="_blank">Api de dragoll ball<a/></p>
         </div>
     </section>
     <section class="skills scroll" id="skills">
